--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -58,7 +58,7 @@
 }
 
 .clip3 {
-		background: url(../public/3.jpg);
+		background: url(../public/3.png);
 		background-size: 100% 100%;
 		clip-path: polygon(0 80%, 100% 60%, 100% 100%, 0 100%);
 }
